# tauri-plugin-autostart

./: Cargo.toml  DEPENDENTS.md  README.md  package.json
Source/: lib.rs
dist-js/: index.d.ts  index.min.js  index.min.js.map  index.mjs  index.mjs.map
guest-js/: index.ts
